# exaqube-task

./: .env.example  .gitignore  pyproject.toml  readme.md  tools.yaml
app/: chat.py
scraper/: locations.py  process_files.py  scraper.py
